--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -13,6 +13,21 @@
       "is_incremental": false
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
+      "type": "Conceptual",
+      "source_relative_path": "articles/chat.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/chat.html",
+          "hash": "a9kBMUBZBrjSLuxKASyZNg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
       "type": "Conceptual",
       "source_relative_path": "articles/intro.md",
       "output": {
@@ -95,8 +110,8 @@
         "ConceptualDocumentProcessor": {
           "can_incremental": true,
           "incrementalPhase": "build",
-          "total_file_count": 3,
-          "skipped_file_count": 3
+          "total_file_count": 4,
+          "skipped_file_count": 4
         }
       }
     },
